--- a/webAleaFront/src/assets/css/custom_node.css
+++ b/webAleaFront/src/assets/css/custom_node.css
@@ -55,3 +55,12 @@
     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
     cursor: pointer;
 }
+
+.node-input {
+    font-size: 14px;
+    border-radius: 4px;
+    padding: 6px 8px;
+    border: 2px solid #e9e9e9;
+    width: auto;
+    box-sizing: border-box;
+}
