--- a/webAleaFront/src/assets/css/app.css
+++ b/webAleaFront/src/assets/css/app.css
@@ -1,4 +1,4 @@
-/* ========== STRUCTURE GLOBALE ========== */
+/* ========== GLOBAL STRUCTURE ========== */
 html, body, #root {
   height: 100%;
   width: 100%;
