--- a/webAleaFront/src/assets/css/custom_node.css
+++ b/webAleaFront/src/assets/css/custom_node.css
@@ -46,7 +46,7 @@
     overflow: auto;
 }
 
-/* HANDLE (connecteurs) */
+/* HANDLE (connectors) */
 .node-handle {
     width: 12px !important;
     height: 12px !important;
